k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nike-ingress
spec:
  # defaultBackend:
  #   service:
  #     name: nike-service
  #     port:
  #       number: 3000
  rules:
  - host: www.clone.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nike-service
            port:
              number: 3000
